--- a/package.json
+++ b/package.json
@@ -26,5 +26,38 @@
     "eslint-plugin-vue": "^7.0.0",
     "prettier": "^2.2.1",
     "typescript": "~4.1.5"
-  }
+  },
+
+  "eslintConfig": {
+    "root": true,
+    "env": {
+        "node": true
+    },
+    "extends": [
+        "plugin:vue/vue3-essential",
+        "eslint:recommended",
+        "@vue/typescript/recommended",
+        "@vue/prettier",
+        "@vue/prettier/@typescript-eslint"
+    ],
+    "parserOptions": {
+        "ecmaVersion": 2020
+    },
+    "rules": {
+        "@typescript-eslint/no-explicit-any": "off",
+        "@typescript-eslint/no-empty-function": "off",
+        "@typescript-eslint/explicit-module-boundary-types": "off",
+        "prettier/prettier": [
+            "error",
+            {
+                 "tabWidth": 4,
+                    "useTabs": true,
+                    "endOfLine": "auto",
+                    "singleQuote": true,
+                    "semi": false,
+                    "trailingComma": "all"
+            }
+        ]
+    }
+}
 }
